--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/joy": "^5.0.0-beta.29",
     "@mui/material": "^5.15.11",
+    "@mui/x-tree-view": "^7.7.0",
     "@reduxjs/toolkit": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
