--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "stripe": "^15.12.0"
   }
 }
