--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.11",
     "@mui/x-tree-view": "^7.7.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/stripe-js": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
