--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,11 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/",
+      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
+      "headers": {
+        "Access-Conrtol-Allow-Origin": "*"
+      }
     }
   ]
 }
